# tennis-video-analyzer

./: .env.example  .gitignore  PLAN.md  README.md  WORKLOG.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/tennis_analyzer/: __init__.py  cli.py
src/tennis_analyzer/data/: __init__.py
src/tennis_analyzer/feedback/: __init__.py
src/tennis_analyzer/models/: __init__.py
src/tennis_analyzer/pose/: __init__.py  estimator.py  landmarks.py
src/tennis_analyzer/segmentation/: __init__.py
src/tennis_analyzer/training/: __init__.py
src/tennis_analyzer/video/: __init__.py  annotate.py  io.py
tests/: test_annotate.py  test_package.py  test_pose_estimator.py  test_pose_landmarks.py  test_video_io.py
